Create actor view.

--- a/views/actors/index.erb
+++ b/views/actors/index.erb
@@ -1,3 +1,5 @@
+<h1> Actors </h1>
+
 <% actors.each do |actor| %>
-<a href="/actors/<%= actor["id"] %>"><%= actor["name"] %></a><br>
+  <a href="/actors/<%= actor["id"] %>"><%= actor["name"] %></a><br>
 <% end %>
