--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,14 +1,18 @@
 <html>
 <head>
   <title>Movie Database</title>
-<head>
+  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="/css/foundation.min.css">
+  <link rel="stylesheet" href="/css/foundation.css">
+  <link rel="stylesheet" href="/css/custom.css">
+</head>
 
   <body>
 
     <%= yield %>
 
   </body>
-  
+
 <footer>
 </footer>
 </html>
