--- a/views/movies/show.erb
+++ b/views/movies/show.erb
@@ -1,5 +1,6 @@
 <h1><%= movie[0]["movie_title"] %></h1>
 <h2><%= movie[0]["genre"] %> from <%= movie[0]["studio"] %></h2>
+<a href="/movies">Back to All Movies</a>
 
 <table>
   <thead>
